include/ggml/ggml-alloc.h

struct ggml_backend;
struct ggml_backend_buffer;